cleanup ng2 templates files

--- a/generators/ng2_main/templates/public/src/app/app.component.html
+++ b/generators/ng2_main/templates/public/src/app/app.component.html
@@ -1,14 +1,12 @@
 <div class="toolbar">
-  <!-- <h4>
-    <span style="color:#fff">კერძო დაზღვევის პორტალი</span>
-  </h4> -->
-  <span class="flex"></span>
-  <dropdown-menu (togglePassword)="togglePasswordChange()"></dropdown-menu>
+
+  <!-- <span class="flex"></span> -->
+
 </div>
 
 <router-outlet></router-outlet>
 
-<password-change-modal></password-change-modal>
+
 
 <div id="snackbar">
 </div>
