--- a/generators/ng2_main/templates/public/src/app/app.component.html
+++ b/generators/ng2_main/templates/public/src/app/app.component.html
@@ -1,12 +1,16 @@
+<div id="routeSidenav" class="sidenav" [style.width]="getSidenavWidth()">
+  <a href="javascript:void(0)" class="closebtn" (click)="closeNav()">&times;</a>
+</div>
+
 <div class="toolbar">
 
   <!-- <span class="flex"></span> -->
 
 </div>
 
-<router-outlet></router-outlet>
-
-
+<div id="main" [style.marginLeft]="getSidenavWidth()">
+  <router-outlet></router-outlet>
+</div>
 
 <div id="snackbar">
 </div>
