--- a/generators/ng2_main/templates/public/src/app/app.component.html
+++ b/generators/ng2_main/templates/public/src/app/app.component.html
@@ -3,7 +3,9 @@
 </div>
 
 <div class="toolbar">
-
+  <button class="btn-sm round-button sidenavButton" (click)="openNav()">
+    <i class="fa fa-bars fa-2x" aria-hidden="true"></i>
+  </button>
   <!-- <span class="flex"></span> -->
 
 </div>
