--- a/generators/ng2_module/templates/list-item.component.html
+++ b/generators/ng2_module/templates/list-item.component.html
@@ -21,8 +21,11 @@
     </div>
     <div class="card-footer rowDirection">
       <span class="flex"></span>
-      <button class="btn-sm fab round-button" (click)="toggleModal()">
+      <button class="btn-sm btn-warning round-button" (click)="toggleModal()">
         <i class="fa fa-pencil fa-2x" aria-hidden="true"></i>
+      </button>
+      <button class="btn-sm fab round-button" (click)="onRemove()">
+        <i class="fa fa-minus fa-2x" aria-hidden="true"></i>
       </button>
     </div>
   </div>
