round button use

--- a/generators/ng2_module/templates/component.html
+++ b/generators/ng2_module/templates/component.html
@@ -67,10 +67,10 @@
           <% } %>
         </div>
         <div class="modal-footer">
-          <button class="btn-primary roundButton" (click)="<%= model %>AddModal.hide(); onAddSave();">
+          <button class="btn-primary round-button" (click)="<%= model %>AddModal.hide(); onAddSave();">
             <i class="fa fa-floppy-o fa-2x" aria-hidden="true"></i>
           </button>
-          <button class="fab roundButton" (click)="<%= model %>AddModal.hide(); onAddCancel();">
+          <button class="fab round-button" (click)="<%= model %>AddModal.hide(); onAddCancel();">
             <i class="fa fa-times fa-2x" aria-hidden="true"></i>
           </button>
         </div>
@@ -101,10 +101,10 @@
         <% } %>
       </div>
       <div class="modal-footer">
-        <button class="btn-primary roundButton" (click)="<%= model %>EditModal.hide(); onEditSave();">
+        <button class="btn-primary round-button" (click)="<%= model %>EditModal.hide(); onEditSave();">
           <i class="fa fa-floppy-o fa-2x" aria-hidden="true"></i>
         </button>
-        <button class="fab roundButton" (click)="<%= model %>EditModal.hide(); modalInfo.cancel();">
+        <button class="fab round-button" (click)="<%= model %>EditModal.hide(); modalInfo.cancel();">
           <i class="fa fa-times fa-2x" aria-hidden="true"></i>
         </button>
       </div>
